# xonymization-scanner

./: Makefile  QUICKSTART.md  README.md  TRANSACTION_GROUPING.md  WEB_APP_README.md  main.py  pyproject.toml  requirements.txt  test_index_config.py  web_app.py
config/: index_config.yaml
examples/: basic_usage.py  raw_parser_example.py
templates/: index.html
tests/: test_parser.py
xonymization_scanner/: __init__.py  client.py  parser.py  raw_parsers.py  scanner.py
